--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <button onclick="proximaSenha('P')">PREFERENCIAL</button>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
